# Python-Repository-Template

./: .gitignore  .pre-commit-config.yaml  README.md  THANKS.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pull_request_tests.yml  push_tests.yml  release.yml
