[metadata]
name = Project Name
version = 0.0a1
description = 
long_description = file: README.md, NEWS.md
long_description_content_type = text/markdown
author = Blinkenlights
author_email = blinkenlights@pm.me
url = https://github.com/Flashing-Blinkenlights/JadePy
url_download = https://github.com/Flashing-Blinkenlights/JadePy/releases
project_urls =
    "Source" = https://github.com/Flashing-Blinkenlights/JadePy
    "Bug Tracker" = https://github.com/Flashing-Blinkenlights/JadePy/issues
    "Documentation" = https://github.com/Flashing-Blinkenlights/JadePy/wiki
    "Funding" = https://github.com/sponsors/Flashing-Blinkenlights
    "Say Thanks!" = https://saythanks.io/to/Flashing-Blinkenlights
readme = README.md
license = GPLv3+
license_files = LICENSE
# platforms = 
# provides =
# requires =
# obsoletes =
keywords = generative,procedural,algorithmic,artificial,creativity,computing,design,generation,ai
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Application Frameworks
    Typing :: Typed

[options]
zip_safe = False

# setup_requires =
install_requires =
    numpy>=1.21
    scipy>=1.7
# extras_require =
python_requires = >=3.8
tests_require =
    autoflake>=1.4
    bandit>=1.7
    flake8>=5.0
    isort>=5.10
    mypy>=0.900
    pre-commit>=2.20
    pydocstringformatter>=0.6
    pylint>=2.14
    pytest>=7.1
    pytest-cov>=3.0
    pyupgrade>=2.37
    tox>=3.25
# entry_points =

# scripts =

# eager_resources =

# dependency_links =

packages=find:
package_dir=
    =src 
# package_data =
include_package_data = True
# exclude_package_data =

# namespace_packages =

# py_modules =

# data_files =

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[flake8]
max-line-length = 80